--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     env_file: .env
     command: mongod --bind_ip 127.0.0.1,172.18.0.2
     #add bind_ip = <ip> in "/data/config/mongod.conf" to accept connections
-  app:
+  backend:
     build: .
     environment:
       NODE_ENV: development
@@ -28,6 +28,19 @@ services:
     depends_on:
       - "mongo"
     command: npm start
+  frontend:
+    build: ./frontend
+    environment:
+      NODE_ENV: development
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/usr/src/app
+      - ./frontend/node_modules:/usr/src/app/node_modules
+    depends_on:
+      - "backend"
+    command: yarn start
   #maybe removed in prod
   mongo-express:
     image: mongo-express
